--- a/DesignTaburetka/App.xaml
+++ b/DesignTaburetka/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DesignTaburetka" 
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
-             StartupUri="AdminUslugi.xaml">
+             StartupUri="Login.xaml">
     <Application.Resources>
         
         <Style x:Key="Text">
