--- a/TaburetkaProject/Notes.xaml
+++ b/TaburetkaProject/Notes.xaml
@@ -8,14 +8,13 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Notes">
-
     <Page.Resources>
         <ContextMenu x:Key="itemMenu">
-            <MenuItem Header="_Edit Item" Name="EditItem" Click="EditItem_Click"/>
-            <MenuItem Header="Open Image" Name="OpenImage" Click="OpenImage_Click"/>
-            <MenuItem Header="_Open File" Name="OpenFile" Click="OpenFile_Click"/>
-            <MenuItem Header="_Mark as done" Name="MarkAsDone" Click="MarkAsDone_Click"/>
-            <MenuItem Header="_Delete" Name="DeleteItem" Click="DeleteItem_Click"/>
+            <MenuItem Header="Редактировать" Name="EditItem" Click="EditItem_Click"/>
+            <MenuItem Header="Открыть фото" Name="OpenImage" Click="OpenImage_Click"/>
+            <MenuItem Header="Открыть файл" Name="OpenFile" Click="OpenFile_Click"/>
+            <MenuItem Header="Отметить как выполнено" Name="MarkAsDone" Click="MarkAsDone_Click"/>
+            <MenuItem Header="Удалить" Name="DeleteItem" Click="DeleteItem_Click"/>
         </ContextMenu>
     </Page.Resources>
     <Border CornerRadius="8" Background="#003B46">
@@ -39,18 +38,18 @@
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel>
-                                    <TextBlock Text="Description:" FontWeight="Bold"/>
+                                    <TextBlock Text="Описание:" FontWeight="Bold"/>
                                     <TextBlock Name="Description" Text="{Binding Description}"/>
-                                    <TextBlock Text="Image:" FontWeight="Bold"/>
+                                    <TextBlock Text="Изображение:" FontWeight="Bold"/>
                                     <TextBlock Name="Image" Text="{Binding ImageSource}"/>
-                                    <TextBlock Text="File:" FontWeight="Bold"/>
+                                    <TextBlock Text="Файл:" FontWeight="Bold"/>
                                     <TextBlock Name="File" Text="{Binding FileSource}"/>
                                     <TextBlock Name="IsDone" FontWeight="Bold" Grid.Column="2" HorizontalAlignment="Right" Text="{Binding IsDone}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
-                    <CheckBox x:Name="chkShowNotDone" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Content="Show not done items" Checked="chkShowNotDone_Checked" Unchecked="chkShowNotDone_Unchecked"/>
+                    <CheckBox x:Name="chkShowNotDone" Content="Показать невыполненные задачи" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Bottom"  Checked="chkShowNotDone_Checked" Unchecked="chkShowNotDone_Unchecked"/>
                 </Grid>
             </StackPanel>
 
