--- a/DesignTaburetka/App.xaml
+++ b/DesignTaburetka/App.xaml
@@ -563,6 +563,9 @@
                                 <Setter Property="Background" TargetName="border" Value="#AFEEEE"/>
                                 <Setter Property="BorderBrush" TargetName="border" Value="#AFEEEE"/>
                             </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" TargetName="border" Value="#e0ffff"/>
+                            </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
