--- a/DesignTaburetka/Pages/ContractsForWorkers.xaml
+++ b/DesignTaburetka/Pages/ContractsForWorkers.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DesignTaburetka.Pages.ContractsForWorkers"
+﻿<Page x:Class="DesignTaburetka.Pages.ContractsForWorkers"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -61,7 +61,7 @@
                                 <DataGridTemplateColumn Width="50" CanUserSort="False">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
-                                            <Button Name="BtnDeleteProject" Click="BtnDeleteProject_Click" Style="{StaticResource IconButtonsStyle}" 
+                                            <Button Name="BtnMoveToCompleted" Click="BtnMoveToCompleted_Click" Style="{StaticResource IconButtonsStyle}" 
                                     Tag="IsCloseButton" Cursor="Hand" Content="{f:Icon MinusCircle}">
                                             </Button>
                                         </DataTemplate>
@@ -96,7 +96,7 @@
                                 <DataGridTemplateColumn Width="50" CanUserSort="False">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
-                                            <Button Name="BtnDeleteProject" Click="BtnDeleteProject_Click" Style="{StaticResource IconButtonsStyle}" 
+                                            <Button Name="BtnMoveToInWork" Click="BtnMoveToInWork_Click" Style="{StaticResource IconButtonsStyle}" 
                                     Tag="IsCloseButton" Cursor="Hand" Content="{f:Icon MinusCircle}">
                                             </Button>
                                         </DataTemplate>
@@ -104,7 +104,7 @@
                                 </DataGridTemplateColumn>
                             </DataGrid.Columns>
                         </DataGrid>
-                        <Button Name="BtnAddService" Content="Добавить" HorizontalAlignment="Right" VerticalAlignment="Bottom" 
+                        <!--<Button Name="BtnAddService" Content="Добавить" HorizontalAlignment="Right" VerticalAlignment="Bottom" 
                 Margin="10" Click="BtnAddService_Click"  Width="100" Height="30" Style="{StaticResource btnAddClient}" >
                             <Button.Template>
                                 <ControlTemplate>
@@ -113,7 +113,7 @@
                                     </Border>
                                 </ControlTemplate>
                             </Button.Template>
-                        </Button>
+                        </Button>-->
                     </Grid>
                 </WrapPanel>
 
@@ -142,7 +142,7 @@
                                 <DataGridTemplateColumn Width="50" CanUserSort="False">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
-                                            <Button Name="BtnDeleteProject" Click="BtnDeleteProject_Click" Style="{StaticResource IconButtonsStyle}" 
+                                            <Button Name="BtnDeleteCompleted" Click="BtnDeleteCompleted_Click" Style="{StaticResource IconButtonsStyle}" 
                                     Tag="IsCloseButton" Cursor="Hand" Content="{f:Icon MinusCircle}">
                                             </Button>
                                         </DataTemplate>
@@ -150,7 +150,7 @@
                                 </DataGridTemplateColumn>
                             </DataGrid.Columns>
                         </DataGrid>
-                        <Button Name="BtnAddService2" Content="Добавить" HorizontalAlignment="Right" VerticalAlignment="Bottom" 
+                        <!--<Button Name="BtnAddService2" Content="Добавить" HorizontalAlignment="Right" VerticalAlignment="Bottom" 
                 Margin="10" Click="BtnAddService_Click"  Width="100" Height="30" Style="{StaticResource btnAddClient}" >
                             <Button.Template>
                                 <ControlTemplate>
@@ -159,7 +159,7 @@
                                     </Border>
                                 </ControlTemplate>
                             </Button.Template>
-                        </Button>
+                        </Button>-->
                     </Grid>
                 </WrapPanel>
 
@@ -167,4 +167,4 @@
         </TabControl>
 
     </Grid>
-</Window>
+</Page>
