--- a/DesignTaburetka/Pages/WindowAddClient.xaml
+++ b/DesignTaburetka/Pages/WindowAddClient.xaml
@@ -28,7 +28,7 @@
         <Label Grid.Row ="3" Grid.Column="0" Content="Тип клиента*" Margin="5"/>
         <Label Grid.Row ="4" Grid.Column="0" Content="* - обязательно к заполнению" Margin="5"/>
 
-        <TextBox Grid.Row="0" Grid.Column="1" x:Name="Name" Margin="5" ></TextBox>
+        <TextBox Grid.Row="0" Grid.Column="1" x:Name="clientName" Margin="5" ></TextBox>
         <TextBox Grid.Row="1" Grid.Column="1" x:Name="Phones" Margin="5"/>
         <TextBox Grid.Row="2" Grid.Column="1" x:Name="Adresses" Margin="5"/>
         <ComboBox x:Name="ClientType" Grid.Row="3" Grid.Column="1" Margin="5" SelectionChanged="clientType_SelectionChanged">
