--- a/DesignTaburetka/ManagerUslugi.xaml
+++ b/DesignTaburetka/ManagerUslugi.xaml
@@ -6,13 +6,13 @@
         xmlns:local="clr-namespace:DesignTaburetka"
         xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
         mc:Ignorable="d"
-        Title="ManagerUslugi" Height="597.492" Width="800"
+        Height="680" Width="1280" WindowStartupLocation="CenterScreen"
         WindowStyle="None" AllowsTransparency="True" Background="Transparent">
     <Border CornerRadius="10" MouseDown="Border_MouseDown">
         <Border.Background>
             <LinearGradientBrush StartPoint="1,0" EndPoint="0,1">
                 <GradientStop Color="#c4dfe6" Offset="0"></GradientStop>
-                <GradientStop Color="#66a5ad" Offset="1" ></GradientStop>
+                <GradientStop Color="#709775" Offset="1" ></GradientStop>
             </LinearGradientBrush>
         </Border.Background>
         <Grid>
@@ -25,7 +25,7 @@
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0.4,0" EndPoint="0.5,1">
                         <GradientStop Color="#003b46" Offset="0"></GradientStop>
-                        <GradientStop Color="#66a5ad" Offset="1"></GradientStop>
+                        <GradientStop Color="#709775" Offset="1"></GradientStop>
                     </LinearGradientBrush>
                 </Border.Background>
             </Border>
@@ -165,7 +165,7 @@
                 <!-- End: Button Close | Restore | Minimize -->
 
                 <Frame Grid.Row="1"
-                       Name="fContainer3"
+                       Name="fContainerManager"
                        Margin="20 10"
                        NavigationUIVisibility="Hidden">
                 </Frame>
