--- a/DesignTaburetka/Pages/Contracts.xaml
+++ b/DesignTaburetka/Pages/Contracts.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:DesignTaburetka.Pages" xmlns:f="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      
       Title="Contracts">
 
     <Grid>
@@ -65,7 +65,7 @@
                                 </DataGridTextColumn>
                                 <DataGridTextColumn Header="Д" Binding="{Binding Path='design_link'}" Width="60" CanUserSort="False"/>
                                 <DataGridTextColumn Header="Р" Binding="{Binding Path='measures_link'}" Width="60" CanUserSort="False"/>
-                                <DataGridTextColumn Header="!!!" Binding="{Binding Path='order_emergency'}" Width="60" CanUserSort="True"/>
+                                <DataGridTextColumn Header="Срочность" Binding="{Binding Path='order_emergency'}" Width="*" CanUserSort="True"/>
                                 <DataGridTemplateColumn Width="50" CanUserSort="False">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
