--- a/DesignTaburetka/Pages/ContractsForManager.xaml
+++ b/DesignTaburetka/Pages/ContractsForManager.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="DesignTaburetka.Pages.ContractsForWorkers"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DesignTaburetka.Pages"
-        xmlns:f="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
-        mc:Ignorable="d" 
-        Title="ContractsForWorkers" >
+﻿<Page x:Class="DesignTaburetka.Pages.ContractsForManager"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:DesignTaburetka.Pages" xmlns:f="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
+      mc:Ignorable="d" 
+      Title="ContractsForManager">
+
     <Grid HorizontalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
@@ -46,7 +46,7 @@
                                     ItemsSource="{Binding }"  RowStyle="{StaticResource DataRowStyle}"
                                       CellStyle="{StaticResource DataCellStyle}"
                                       Style="{StaticResource DataStyle}"
-                                      ColumnHeaderStyle="{StaticResource HeaderStyle}" >        
+                                      ColumnHeaderStyle="{StaticResource HeaderStyle}" >
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="id" Binding="{Binding Path='work_id'}" IsReadOnly="True" Width="90" SortDirection="Ascending" CanUserSort="True" />
                                 <!--<DataGridTextColumn Header="Порядоковый номер" Binding="{Binding 'index_num'}" Width="Auto" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>-->
