--- a/DesignTaburetka/Pages/TeamDepartment.xaml
+++ b/DesignTaburetka/Pages/TeamDepartment.xaml
@@ -23,7 +23,7 @@
                   ColumnHeaderStyle="{StaticResource HeaderStyle}" 
                  >
             <DataGrid.Columns>
-                <DataGridTextColumn Header="id" Binding="{Binding Path='emp_id'}" IsReadOnly="True" Width="Auto" SortDirection="Ascending" CanUserSort="True"/>
+                <DataGridTextColumn Header="id" Binding="{Binding Path='worker_id'}" IsReadOnly="True" Width="100" SortDirection="Ascending" CanUserSort="True"/>
                 <DataGridTextColumn Header="Имя работника" Binding="{Binding Path='emp_name'}" Width="*" CanUserSort="True"/>
                 <DataGridTextColumn Header="Фамилия работника" Binding="{Binding Path='emp_surname'}" Width="*" CanUserSort="True"/>
                 <DataGridTextColumn Header="Должность" Binding="{Binding Path='dep_name'}" Width="*" CanUserSort="True"/>
